# quattordici

./: CMakeLists.txt  a.out  quattordici.c  run.sh
